home page finished no responsive yet

--- a/test.html
+++ b/test.html
@@ -10,9 +10,9 @@
     <div class="main">
 
       <picture>
-        <source media="(min-width: 1450px)" srcset="docs/Noir_Home.png">
-        <source media="(min-width: 1024px)" srcset="docs/Noir_Home.png">
-        <img src="docs/Noir_Home.png" style="width: 100vw; height: 100%;">
+        <source media="(min-width: 1450px)" srcset="img/noir-home.png">
+        <source media="(min-width: 1024px)" srcset="img/noir-home.png">
+        <img src="img/noir-home.png" style="width: 100vw; height: 100%;">
       </picture>    
     </div> 
     <!-- <div class="main-m"> -->
