--- a/index.html
+++ b/index.html
@@ -9,48 +9,123 @@
   <body>
     <div class="main">
 
-      <div class="container">
-        <!-- <video id="video" width="100vw" height="100vh" onclick="play();"> -->
-        <!-- <video id="video" autoplay> -->
+      <div id="home" class="container">
         <video id="video" muted autoplay playsinline loop>
             <source src="img/noir.mp4" type="video/mp4" />
             <source src="img/noir.webm" type="video/webm" />
         </video>
         <div class="overlay">
-          <div class="logo">
-            <picture>
-              <source media="(min-width: 1450px)" srcset="img/home-logo.png">
-              <source media="(min-width: 1024px)" srcset="img/home-logo.png">
-              <img src="img/home-logo.png" style="width: 13.6vw; height: 12.8vh;">
-            </picture>
+          <div class="header">
+            <div class="logo">
+              <picture>
+                <source media="(min-width: 1450px)" srcset="img/home-logo.png">
+                <source media="(min-width: 1024px)" srcset="img/home-logo.png">
+                <img src="img/home-logo.png" style="width: 13.5vw; height: 12.5vh;">
+              </picture>
+            </div>
+            <div class="menu">A B O U T</div>
           </div>
-          <div class="menu">A B O U T</div>
-          <div class="main-title">
-            <span class="span1">A </span><span class="span2">new way to collaborate, earn & pay</span>
+
+          <div class="main-title">A new way to collaborate, earn &amp; pay</div>
+          <div class="sub-title">A home for digital nomads and remote work</div>
+          <div class="invite"><a href="#invites"><button id="invite">B E C O M E&nbsp;&nbsp; B E T T E R&nbsp;&nbsp; ></button></a></div>
+          <div class="shapes">
+            <div class="one-third">
+              <div class="circle">
+                <picture>
+                  <source media="(min-width: 1450px)" srcset="img/noir-check.png">
+                  <source media="(min-width: 1024px)" srcset="img/noir-check.png">
+                  <img src="img/noir-check.png" style="width: 4.2vw; height: 4.2vw;">
+                </picture>
+              </div>
+              <div class="title">S E A M L E S S</div><br /><br />
+              <div class="message">when you pay</div>
+            </div>
+            <div class="one-third">
+              <div class="circle">
+                <picture>
+                  <source media="(min-width: 1450px)" srcset="img/noir-arrow.png">
+                  <source media="(min-width: 1024px)" srcset="img/noir-arrow.png">
+                  <img src="img/noir-arrow.png" style="width: 4.2vw; height: 4.2vw;">
+                </picture>
+              </div>
+              <div class="title">E N G A G I N G</div><br /><br />
+              <div class="message">when you earn</div>
+            </div>
+            <div class="one-third">
+              <div class="circle">
+                <picture>
+                  <source media="(min-width: 1450px)" srcset="img/noir-circles.png">
+                  <source media="(min-width: 1024px)" srcset="img/noir-circles.png">
+                  <img src="img/noir-circles.png" style="width: 4.2vw; height: 4.2vw;">
+                </picture>
+              </div>
+              <div class="title">S O C I A L</div><br /><br />
+              <div class="message">when you collaborate</div>
+            </div>
           </div>
-          <div class="sub-title">
-            <span class="span1">A </span><span class="span2">home for digital nomads and remote work</span>
-          </div><br /><br />
-          <div class="invite"><button id="invite">G E T &nbsp;&nbsp;A N &nbsp;&nbsp;E A R L Y &nbsp;&nbsp;I N V I T E</button></div>
-          <div class="message-line">
-            <div class="part1">
-              <div class="img1"></div>
-              <div class="title1"></div>
-              <div class="message1"></div>
-            </div>
-            <div class="part2">
-              <div class="img2"></div>
-              <div class="title2"></div>
-              <div class="message2"></div>
-            </div>
-            <div class="part3">
-              <div class="img3"></div>
-              <div class="title3"></div>
-              <div class="message3"></div>
-            </div>
+          <div class="invite-form">
+            <div class="title">Become yourself with us</div>
+            <form action="#" method="POST">
+              <input id="firstname" name="firstname" placeholder="First Name" />
+              <input id="lastname" name="lastname" placeholder="Last Name" /> <br />
+              <input id="email" name="email" placeholder="Email" />
+              <input id="phone" name="phone" placeholder="Phone" /> <br />
+              <textarea id="questions" name="questions" placeholder="Any questions?"></textarea> <br />
+              <button type="submit" id="submit" name="submit">B E &nbsp;&nbsp;B E T T E R</button>
+            </form>
+          </div>
+          <a href="#home"><div class="home-link"></div></a>
+          <a href="about.html"><div class="about-link"></div></a>
+        </div>
+      </div>
+      <div class="middle-content">
+        <div class="one-third">
+          <div class="title">W H A T</div>
+          <div class="text">
+            <br />
+            We promote: Upskiling, projects & ideas<br />
+            collaboration in our community Hives. A <br />
+            blockchain based earning system, within a <br />
+            decentralised organization and a new way <br />
+            to pay for goods & services.
+          </div>
+        </div>
+        <div class="one-third">
+          <div class="title">W H Y</div>
+          <div class="text">
+            <br />
+            Giving people access to a different type of <br />
+            lifestyle one where success is a meassured by <br />
+            being able to do what you want, where you <br />
+            want, when you want.
+          </div>
+        </div>
+        <div class="one-third">
+          <div class="title">M I S S I O N</div>
+          <div class="text">
+              <br />
+              At the heart of Home Noir is its mission to <br />
+            become the pioneer in global collaboration <br />
+            and shape the way we work, live, earn and <br />
+            spend.
           </div>
         </div>
       </div>
+      <div id="invites" class="invite-section">
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/noir-invite-section-web-notext.png">
+          <source media="(min-width: 1024px)" srcset="img/noir-invite-section-web-notext.png">
+          <img src="img/noir-invite-section-web-notext.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <!-- <div class="noir-slides">
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/noir-slides-web.png">
+          <source media="(min-width: 1024px)" srcset="img/noir-slides-web.png">
+          <img src="img/noir-slides-web.png" style="width: 100vw;">
+        </picture>    
+      </div> -->
     </div>
     <div class="main-m">
         <div class="container">
