replaced form post with get method cause github pages do not allow post

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="invite-form">
             <div class="title">Become yourself with us</div>
-            <form action="index.html" method="POST">
+            <form action="index.html" method="GET">
               <input id="firstname" name="firstname" placeholder="First Name" />
               <input id="lastname" name="lastname" placeholder="Last Name" /> <br />
               <input id="email" name="email" placeholder="Email" />
