--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="img/home-logo.png" style="width: 13.5vw; height: 12.5vh;">
               </picture>
             </div>
-            <div class="menu">A B O U T</div>
+            <div class="menu"><a href="about.html">A B O U T</a></div>
           </div>
 
           <div class="main-title">A new way to collaborate, earn &amp; pay</div>
@@ -67,10 +67,10 @@
           <div class="invite-form">
             <div class="title">Become yourself with us</div>
             <form action="index.html" method="GET">
-              <input id="firstname" name="firstname" placeholder="First Name" />
-              <input id="lastname" name="lastname" placeholder="Last Name" /> <br />
-              <input id="email" name="email" placeholder="Email" />
-              <input id="phone" name="phone" placeholder="Phone" /> <br />
+              <input type="text" id="firstname" name="firstname" placeholder="First Name" required />
+              <input type="text" id="lastname" name="lastname" placeholder="Last Name" required /> <br />
+              <input type="email" id="email" name="email" placeholder="Email" required />
+              <input type="tel" id="phone" name="phone" placeholder="Phone" required /> <br />
               <textarea id="questions" name="questions" placeholder="Any questions?"></textarea> <br />
               <button type="submit" id="submit" name="submit">B E &nbsp;&nbsp;B E T T E R</button>
             </form>
@@ -114,11 +114,16 @@
       </div>
       <div id="invites" class="invite-section">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/noir-invite-section-web-notext.png">
-          <source media="(min-width: 1024px)" srcset="img/noir-invite-section-web-notext.png">
-          <img src="img/noir-invite-section-web-notext.png" style="width: 100vw;">
+          <source media="(min-width: 1450px)" srcset="img/noir-invite-section-web-notext-nofooter.png">
+          <source media="(min-width: 1024px)" srcset="img/noir-invite-section-web-notext-nofooter.png">
+          <img src="img/noir-invite-section-web-notext-nofooter.png" style="width: 100vw;">
         </picture>    
-      </div>
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/footer.png">
+          <source media="(min-width: 1024px)" srcset="img/footer.png">
+          <img src="img/footer.png" style="width: 100vw;">
+        </picture>    
+        </div>
       <!-- <div class="noir-slides">
         <picture>
           <source media="(min-width: 1450px)" srcset="img/noir-slides-web.png">
@@ -157,3 +162,4 @@
   </body>
 </html>
 <script src="js/main.js"></script>
+<script src="js/video.js"></script>
