changed pixes value into responsive view port units

--- a/about.html
+++ b/about.html
@@ -7,56 +7,77 @@
   <meta name="application-name" content="Noir | About">
   <link rel="stylesheet" href="css/main.css?2">
   <body>
-    <div id="about" class="main">
-      <a href="index.html"><div class="home-link-m"></div></a>
-      <a href="index.html"><div class="home-link-a"></div></a>
-      <a href="#about"><div class="about-link-a"></div></a>
-
-      <a href="#hives">   <div class="hives-a"></div>   </a>
-      <a href="#grow">    <div class="grow-a"></div>    </a>
-      <a href="#currency"><div class="currency-a"></div></a>
-      <a href="#ventures"><div class="ventures-a"></div></a>
-
-      <picture>
-        <source media="(min-width: 1450px)" srcset="img/about.png">
-        <source media="(min-width: 1024px)" srcset="img/about.png">
-        <img src="img/about.png" style="width: 100vw;">
-      </picture>    
-      <picture id="hives">
-        <source media="(min-width: 1450px)" srcset="img/hives.png">
-        <source media="(min-width: 1024px)" srcset="img/hives.png">
-        <img src="img/hives.png" style="width: 100vw;">
-      </picture>    
-      <picture id="ethos">
-        <source media="(min-width: 1450px)" srcset="img/ethos.png">
-        <source media="(min-width: 1024px)" srcset="img/ethos.png">
-        <img src="img/ethos.png" style="width: 100vw;">
-      </picture>    
-      <picture id="grow">
-        <source media="(min-width: 1450px)" srcset="img/grow.png">
-        <source media="(min-width: 1024px)" srcset="img/grow.png">
-        <img src="img/grow.png" style="width: 100vw;">
-      </picture>    
-      <picture id="currency">
-        <source media="(min-width: 1450px)" srcset="img/currency.png">
-        <source media="(min-width: 1024px)" srcset="img/currency.png">
-        <img src="img/currency.png" style="width: 100vw;">
-      </picture>    
-      <picture id="ventures">
-        <source media="(min-width: 1450px)" srcset="img/ventures.png">
-        <source media="(min-width: 1024px)" srcset="img/ventures.png">
-        <img src="img/ventures.png" style="width: 100vw;">
-      </picture>    
-      <picture>
-        <source media="(min-width: 1450px)" srcset="img/faq.png">
-        <source media="(min-width: 1024px)" srcset="img/faq.png">
-        <img src="img/faq.png" style="width: 100vw;">
-      </picture>    
-      <picture>
-        <source media="(min-width: 1450px)" srcset="img/footer.png">
-        <source media="(min-width: 1024px)" srcset="img/footer.png">
-        <img src="img/footer.png" style="width: 100vw;">
-      </picture>    
+    <div class="main">
+      <div id="about-id" class="about">
+        <a href="index.html"><div class="home-link-m"></div></a>
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/about.png">
+          <source media="(min-width: 1024px)" srcset="img/about.png">
+          <img src="img/about.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <div class="eco">
+        <a href="#hives-id">   <div class="hives-a"></div>   </a>
+        <a href="#grow-id">    <div class="grow-a"></div>    </a>
+        <a href="#currency-id"><div class="currency-a"></div></a>
+        <a href="#ventures-id"><div class="ventures-a"></div></a>
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/eco.png">
+          <source media="(min-width: 1024px)" srcset="img/eco.png">
+          <img src="img/eco.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <div id="hives-id" class="hives">
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/hives.png">
+          <source media="(min-width: 1024px)" srcset="img/hives.png">
+          <img src="img/hives.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <div id="ethos-id" class="ethos">
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/ethos.png">
+          <source media="(min-width: 1024px)" srcset="img/ethos.png">
+          <img src="img/ethos.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <div id="grow-id" class="grow">
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/grow.png">
+          <source media="(min-width: 1024px)" srcset="img/grow.png">
+          <img src="img/grow.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <div id="currency-id" class="currency">
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/currency.png">
+          <source media="(min-width: 1024px)" srcset="img/currency.png">
+          <img src="img/currency.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <div id="ventures-id" class="ventures">
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/ventures.png">
+          <source media="(min-width: 1024px)" srcset="img/ventures.png">
+          <img src="img/ventures.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <div id="faq-id" class="faq">
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/faq.png">
+          <source media="(min-width: 1024px)" srcset="img/faq.png">
+          <img src="img/faq.png" style="width: 100vw;">
+        </picture>    
+      </div>
+      <div id="footer-id" class="footer">
+        <a href="index.html"><div class="home-link-a"></div></a>
+        <a href="#about-id"><div class="about-link-a"></div></a>
+        <picture>
+          <source media="(min-width: 1450px)" srcset="img/footer.png">
+          <source media="(min-width: 1024px)" srcset="img/footer.png">
+          <img src="img/footer.png" style="width: 100vw;">
+        </picture>    
+      </div>
     </div>
     <div class="main-m">
     </div>
