--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         <div class="one-third">
           <div class="title">W H A T</div>
           <div class="text">
-            <br />
             We promote: Upskiling, projects & ideas<br />
             collaboration in our community Hives. A <br />
             blockchain based earning system, within a <br />
@@ -94,7 +93,6 @@
         <div class="one-third">
           <div class="title">W H Y</div>
           <div class="text">
-            <br />
             Giving people access to a different type of <br />
             lifestyle one where success is a meassured by <br />
             being able to do what you want, where you <br />
@@ -104,7 +102,6 @@
         <div class="one-third">
           <div class="title">M I S S I O N</div>
           <div class="text">
-              <br />
               At the heart of Home Noir is its mission to <br />
             become the pioneer in global collaboration <br />
             and shape the way we work, live, earn and <br />
@@ -114,25 +111,20 @@
       </div>
       <div id="invites" class="invite-section">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/noir-invite-section-web-notext-nofooter.png">
-          <source media="(min-width: 1024px)" srcset="img/noir-invite-section-web-notext-nofooter.png">
-          <img src="img/noir-invite-section-web-notext-nofooter.png" style="width: 100vw;">
-        </picture>    
+          <source media="(min-width: 1450px)" srcset="img/noir-invite.png">
+          <source media="(min-width: 1024px)" srcset="img/noir-invite.png">
+          <img src="img/noir-invite.png" style="width: 100vw;">
+        </picture>   
+      </div>
+      <div class="footer">
         <picture>
           <source media="(min-width: 1450px)" srcset="img/footer.png">
           <source media="(min-width: 1024px)" srcset="img/footer.png">
           <img src="img/footer.png" style="width: 100vw;">
         </picture>    
-        </div>
-      <!-- <div class="noir-slides">
-        <picture>
-          <source media="(min-width: 1450px)" srcset="img/noir-slides-web.png">
-          <source media="(min-width: 1024px)" srcset="img/noir-slides-web.png">
-          <img src="img/noir-slides-web.png" style="width: 100vw;">
-        </picture>    
-      </div> -->
+      </div>
     </div>
-    <div class="main-m">
+    <div class="main-m" style="display: none;">
         <div class="container">
             <!-- <video id="video" width="100vw" height="100vh" onclick="play();"> -->
             <!-- <video id="video" autoplay> -->
