added responsive details for HD screen as well

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <meta name="apple-mobile-web-app-title" content="Noir | About">
   <meta name="application-name" content="Noir | About">
   <link rel="stylesheet" href="css/main.css?2">
+  <link rel="stylesheet" href="css/media.css?2">
   <body>
     <div class="main">
       <div id="about-id" class="about">
