--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <meta charset="utf-8">
   <title>Noir | Welcome</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no user-scalable=0">
   <meta name="apple-mobile-web-app-title" content="Noir">
   <meta name="application-name" content="Noir">
   <link rel="stylesheet" href="css/main.css?2">
+  <link rel="stylesheet" href="css/media.css?2">
   <body>
     <div class="main">
 
@@ -18,9 +20,10 @@
           <div class="header">
             <div class="logo">
               <picture>
-                <source media="(min-width: 1450px)" srcset="img/home-logo.png">
-                <source media="(min-width: 1024px)" srcset="img/home-logo.png">
-                <img src="img/home-logo.png" style="width: 13.5vw; height: 12.5vh;">
+                <!-- <source media="(min-width: 1450px)" srcset="img/home-logo.png">
+                <source media="(min-width: 1024px)" srcset="img/home-logo.png"> -->
+                <!-- <img src="img/home-logo.png" style="width: 13.5vw; height: 12.5vh;"> -->
+                <img src="img/home-logo.png">
               </picture>
             </div>
             <div class="menu"><a href="about.html">A B O U T</a></div>
@@ -75,10 +78,8 @@
               <button type="submit" id="submit" name="submit">B E &nbsp;&nbsp;B E T T E R</button>
             </form>
           </div>
-          <a href="#home"><div class="home-link"></div></a>
-          <a href="about.html"><div class="about-link"></div></a>
         </div>
-      </div>
+      <!-- </div> -->
       <div class="middle-content">
         <div class="one-third">
           <div class="title">W H A T</div>
@@ -117,12 +118,16 @@
         </picture>   
       </div>
       <div class="footer">
+        <a href="#home"><div class="home-link"></div></a>
+        <a href="about.html"><div class="about-link"></div></a>
         <picture>
           <source media="(min-width: 1450px)" srcset="img/footer.png">
           <source media="(min-width: 1024px)" srcset="img/footer.png">
           <img src="img/footer.png" style="width: 100vw;">
         </picture>    
       </div>
+    </div>
+
     </div>
     <div class="main-m" style="display: none;">
         <div class="container">
