desktops / laptops responsive resolution done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="css/media.css?2">
   <body>
     <div class="main">
-
       <div id="home" class="container">
         <video id="video" muted autoplay playsinline loop>
             <source src="img/noir.mp4" type="video/mp4" />
@@ -41,7 +40,7 @@
                   <img src="img/noir-check.png" style="width: 4.2vw; height: 4.2vw;">
                 </picture>
               </div>
-              <div class="title">S E A M L E S S</div><br /><br />
+              <div class="title">S E A M L E S S</div><br />
               <div class="message">when you pay</div>
             </div>
             <div class="one-third">
@@ -52,7 +51,7 @@
                   <img src="img/noir-arrow.png" style="width: 4.2vw; height: 4.2vw;">
                 </picture>
               </div>
-              <div class="title">E N G A G I N G</div><br /><br />
+              <div class="title">E N G A G I N G</div><br />
               <div class="message">when you earn</div>
             </div>
             <div class="one-third">
@@ -63,23 +62,12 @@
                   <img src="img/noir-circles.png" style="width: 4.2vw; height: 4.2vw;">
                 </picture>
               </div>
-              <div class="title">S O C I A L</div><br /><br />
+              <div class="title">S O C I A L</div><br />
               <div class="message">when you collaborate</div>
             </div>
           </div>
-          <div class="invite-form">
-            <div class="title">Become yourself with us</div>
-            <form action="index.html" method="GET">
-              <input type="text" id="firstname" name="firstname" placeholder="First Name" required />
-              <input type="text" id="lastname" name="lastname" placeholder="Last Name" required /> <br />
-              <input type="email" id="email" name="email" placeholder="Email" required />
-              <input type="tel" id="phone" name="phone" placeholder="Phone" required /> <br />
-              <textarea id="questions" name="questions" placeholder="Any questions?"></textarea> <br />
-              <button type="submit" id="submit" name="submit">B E &nbsp;&nbsp;B E T T E R</button>
-            </form>
-          </div>
-        </div>
-      <!-- </div> -->
+         </div>
+      </div>
       <div class="middle-content">
         <div class="one-third">
           <div class="title">W H A T</div>
@@ -111,11 +99,22 @@
         </div>
       </div>
       <div id="invites" class="invite-section">
-        <picture>
+          <div class="invite-form">
+              <div class="title">Become yourself with us</div>
+              <form action="index.html" method="GET">
+                <input type="text" id="firstname" name="firstname" placeholder="First Name" required />
+                <input type="text" id="lastname" name="lastname" placeholder="Last Name" required /> <br />
+                <input type="email" id="email" name="email" placeholder="Email" required />
+                <input type="tel" id="phone" name="phone" placeholder="Phone" required /> <br />
+                <textarea id="questions" name="questions" placeholder="Any questions?"></textarea> <br />
+                <button type="submit" id="submit" name="submit">B E &nbsp;&nbsp;B E T T E R</button>
+              </form>
+            </div>
+          <!-- <picture>
           <source media="(min-width: 1450px)" srcset="img/noir-invite.png">
           <source media="(min-width: 1024px)" srcset="img/noir-invite.png">
           <img src="img/noir-invite.png" style="width: 100vw;">
-        </picture>   
+        </picture>    -->
       </div>
       <div class="footer">
         <a href="#home"><div class="home-link"></div></a>
@@ -126,8 +125,6 @@
           <img src="img/footer.png" style="width: 100vw;">
         </picture>    
       </div>
-    </div>
-
     </div>
     <div class="main-m" style="display: none;">
         <div class="container">
