--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Noir | Welcome</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no user-scalable=0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="apple-mobile-web-app-title" content="Noir">
   <meta name="application-name" content="Noir">
   <link rel="stylesheet" href="css/main.css?2">
