--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
   <body>
     <div id="main-id" class="main">
-      <canvas style="width: 100vw; height: 300vh;"></canvas>
+      <!-- <canvas style="width: 100vw;"></canvas> -->
       <div id="about-id" class="about">
         <a href="index.html"><div class="home-link-m"></div></a>
         <picture>
@@ -55,9 +55,9 @@
       </div>
       <div id="currency-id" class="currency">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/currency.png">
-          <source media="(min-width: 1024px)" srcset="img/currency.png">
-          <img src="img/currency.png" style="width: 100vw;">
+          <source media="(min-width: 1450px)" srcset="img/currency-transparent.png">
+          <source media="(min-width: 1024px)" srcset="img/currency-transparent.png">
+          <img src="img/currency-transparent.png" style="width: 100vw;">
         </picture>    
       </div>
       <div id="ventures-id" class="ventures">
@@ -69,23 +69,23 @@
       </div>
       <div id="faq-id" class="faq">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/faq.png">
-          <source media="(min-width: 1024px)" srcset="img/faq.png">
-          <img src="img/faq.png" style="width: 100vw;">
+          <source media="(min-width: 1450px)" srcset="img/faq-transparent.png">
+          <source media="(min-width: 1024px)" srcset="img/faq-transparent.png">
+          <img src="img/faq-transparent.png" style="width: 100vw;">
         </picture>    
       </div>
       <div id="footer-id" class="footer">
         <a href="index.html"><div class="home-link-a"></div></a>
         <a href="#about-id"><div class="about-link-a"></div></a>
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/footer.png">
-          <source media="(min-width: 1024px)" srcset="img/footer.png">
-          <img src="img/footer.png" style="width: 100vw;">
+          <source media="(min-width: 1450px)" srcset="img/footer-transparent.png">
+          <source media="(min-width: 1024px)" srcset="img/footer-transparent.png">
+          <img src="img/footer-transparent.png" style="width: 100vw;">
         </picture>    
       </div>
     </div>
-    <div class="main-m">
-    </div>
+    <!-- <div class="main-m">
+    </div> -->
   </body>
 </html>
 <script src="js/main.js"></script>
