added auto refresher style and js

--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="apple-mobile-web-app-title" content="Noir | About">
   <meta name="application-name" content="Noir | About">
-  <link rel="stylesheet" href="css/main.css?2">
-  <link rel="stylesheet" href="css/media.css?2">
+  <link rel="stylesheet" href="css/main.css?3">
+  <link rel="stylesheet" href="css/media.css?3">
   <script src="js/particles-min.js"></script>
 
   <body>
@@ -88,5 +88,5 @@
     </div> -->
   </body>
 </html>
-<script src="js/main.js"></script>
-<script src="js/particles_init.js"></script>
+<script src="js/main.js?3"></script>
+<script src="js/particles_init.js?3"></script>
