--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="apple-mobile-web-app-title" content="Noir">
   <meta name="application-name" content="Noir">
-  <link rel="stylesheet" href="css/main.css?2">
-  <link rel="stylesheet" href="css/media.css?2">
+  <link rel="stylesheet" href="css/main.css?3">
+  <link rel="stylesheet" href="css/media.css?3">
   <body>
     <div class="main">
       <div id="home" class="container">
@@ -156,5 +156,5 @@
         </picture>     -->
   </body>
 </html>
-<script src="js/main.js"></script>
+<script src="js/main.js?3"></script>
 <script src="js/video.js"></script>
