--- a/about.html
+++ b/about.html
@@ -88,5 +88,5 @@
     </div> -->
   </body>
 </html>
-<script src="js/main.js?4"></script>
+<!-- <script src="js/main.js?4"></script> -->
 <script src="js/particles_init.js?4"></script>
