--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="apple-mobile-web-app-title" content="Noir">
   <meta name="application-name" content="Noir">
-  <link rel="stylesheet" href="css/main.css?4">
-  <link rel="stylesheet" href="css/media.css?4">
+  <link rel="stylesheet" href="css/main.css?4.2">
+  <link rel="stylesheet" href="css/media.css?4.2">
   <body>
     <div class="main">
       <div id="home" class="container">
@@ -70,52 +70,52 @@
         <div class="one-third">
           <div class="title">W H A T</div>
           <div class="text">
-            We promote: Upskiling, projects & ideas<br />
-            collaboration in our community Hives. A <br />
-            blockchain based earning system, within a <br />
-            decentralised organization and a new way <br />
+            We promote: Upskiling, projects & ideas   
+            collaboration in our community Hives. A    
+            blockchain based earning system, within a  
+            decentralised organization and a new way   
             to pay for goods & services.
           </div>
         </div>
         <div class="one-third">
           <div class="title">W H Y</div>
           <div class="text">
-            Giving people access to a different type of <br />
-            lifestyle one where success is a meassured by <br />
-            being able to do what you want, where you <br />
+            Giving people access to a different type of   
+            lifestyle one where success is a meassured by 
+            being able to do what you want, where you     
             want, when you want.
           </div>
         </div>
         <div class="one-third">
           <div class="title">M I S S I O N</div>
           <div class="text">
-              At the heart of Home Noir is its mission to <br />
-            become the pioneer in global collaboration <br />
-            and shape the way we work, live, earn and <br />
+              At the heart of Home Noir is its mission to 
+            become the pioneer in global collaboration    
+            and shape the way we work, live, earn and     
             spend.
           </div>
         </div>
       </div>
       <div id="invites" class="invite-section">
-          <div class="invite-form">
-              <div class="title">Become yourself with us</div>
-              <form action="index.html" method="GET">
-                <input type="text" id="firstname" name="firstname" placeholder="First Name" required />
-                <input type="text" id="lastname" name="lastname" placeholder="Last Name" required /> <br />
-                <input type="email" id="email" name="email" placeholder="Email" required />
-                <input type="tel" id="phone" name="phone" placeholder="Phone" required /> <br />
-                <textarea id="questions" name="questions" placeholder="Any questions?"></textarea> <br />
-                <button type="submit" id="submit" name="submit">B E &nbsp;&nbsp;B E T T E R</button>
-              </form>
-            </div>
+        <div class="invite-form">
+          <div class="title">Become yourself with us</div>
+          <form action="index.html" method="GET">
+            <input type="text" id="firstname" name="firstname" placeholder="First Name" required />
+            <input type="text" id="lastname" name="lastname" placeholder="Last Name" required /> <br />
+            <input type="email" id="email" name="email" placeholder="Email" required />
+            <input type="tel" id="phone" name="phone" placeholder="Phone" required /> <br />
+            <textarea id="questions" name="questions" placeholder="Any questions?"></textarea> <br />
+            <button type="submit" id="submit" name="submit">B E &nbsp;&nbsp;B E T T E R</button>
+          </form>
+        </div>
       </div>
       <div class="footer">
         <a href="#home"><div class="home-link"></div></a>
         <a href="about.html"><div class="about-link"></div></a>
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/footer.png">
-          <source media="(min-width: 1024px)" srcset="img/footer.png">
-          <img src="img/footer.png" style="width: 100vw;">
+          <source media="(min-width: 1100px)" srcset="img/footer-transparent.png">
+          <source media="(min-width: 320px)" srcset="img/footer-transparent-m.png">
+          <img src="img/footer-transparent.png" style="width: 100vw;">
         </picture>    
       </div>
     </div>
@@ -133,5 +133,5 @@
     </div>
   </body>
 </html>
-<script src="js/main.js?4"></script>
+<script src="js/main.js?4.4"></script>
 <script src="js/video.js"></script>
