--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="apple-mobile-web-app-title" content="Noir | About">
   <meta name="application-name" content="Noir | About">
-  <link rel="stylesheet" href="css/main.css?4.2">
-  <link rel="stylesheet" href="css/media.css?4.2">
+  <link rel="stylesheet" href="css/main.css?4.3">
+  <link rel="stylesheet" href="css/media.css?4.3">
   <script src="js/particles-min.js"></script>
 
   <body>
@@ -49,50 +49,50 @@
         <a href="#currency-id"><div class="currency-a"></div></a>
         <a href="#ventures-id"><div class="ventures-a"></div></a>
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/eco-transparent.png">
-          <source media="(min-width: 1024px)" srcset="img/eco-transparent.png">
+          <source media="(min-width: 1100px)" srcset="img/eco-transparent.png">
+          <source media="(min-width: 320px)" srcset="img/eco-transparent-m.png">
           <img src="img/eco-transparent.png" style="width: 100vw;">
         </picture>    
       </div>
       <div id="hives-id" class="hives">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/hives.png">
-          <source media="(min-width: 1024px)" srcset="img/hives.png">
+          <source media="(min-width: 1100px)" srcset="img/hives.png">
+          <source media="(min-width: 320px)" srcset="img/hives-m.png">
           <img src="img/hives.png" style="width: 100vw;">
         </picture>    
       </div>
       <div id="ethos-id" class="ethos"> 
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/ethos-transparent.png">
-          <source media="(min-width: 1024px)" srcset="img/ethos-transparent.png">
+          <source media="(min-width: 1100px)" srcset="img/ethos-transparent.png">
+          <source media="(min-width: 320px)" srcset="img/ethos-transparent-m.png">
           <img src="img/ethos-transparent.png" style="width: 100vw;">
         </picture>    
       </div>
       <div id="grow-id" class="grow">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/grow.png">
-          <source media="(min-width: 1024px)" srcset="img/grow.png">
+          <source media="(min-width: 1100px)" srcset="img/grow.png">
+          <source media="(min-width: 320px)" srcset="img/grow-m.png">
           <img src="img/grow.png" style="width: 100vw;">
         </picture>    
       </div>
       <div id="currency-id" class="currency">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/currency-transparent.png">
-          <source media="(min-width: 1024px)" srcset="img/currency-transparent.png">
+          <source media="(min-width: 1100px)" srcset="img/currency-transparent.png">
+          <source media="(min-width: 320px)" srcset="img/currency-transparent-m.png">
           <img src="img/currency-transparent.png" style="width: 100vw;">
         </picture>    
       </div>
       <div id="ventures-id" class="ventures">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/ventures.png">
-          <source media="(min-width: 1024px)" srcset="img/ventures.png">
+          <source media="(min-width: 1100px)" srcset="img/ventures.png">
+          <source media="(min-width: 320px)" srcset="img/ventures-m.png">
           <img src="img/ventures.png" style="width: 100vw;">
         </picture>    
       </div>
       <div id="faq-id" class="faq">
         <picture>
-          <source media="(min-width: 1450px)" srcset="img/faq-transparent.png">
-          <source media="(min-width: 1024px)" srcset="img/faq-transparent.png">
+          <source media="(min-width: 1100px)" srcset="img/faq-transparent.png">
+          <source media="(min-width: 320px)" srcset="img/faq-transparent-m.png">
           <img src="img/faq-transparent.png" style="width: 100vw;">
         </picture>    
       </div>
